--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body{
 #mainCharacter{
     left: 92px;
     top: 402px;
+    transition: all 1s ease-out;
 }
 .gameObject{
     position: absolute;
