--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,12 @@ body{
     left: 13px;
     top: 446px;
 }
+#tree{
+    width: 58px;
+    height: 71px;
+    left: 13px;
+    top: 446px;
+}
 #door{
     width: 25px;
     height: 30px;
